[project]
name = "orchestratorlayer"
version = "0.1.0"
description = ""
authors = [
    {name = "Juanjuan Qi",email = "juanjuan.qi@zoom.us"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "motor>=3.3.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"


[tool.poetry]
packages = [{ include = "orchestrator_layer", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
